--- a/twitterClone.html
+++ b/twitterClone.html
@@ -1,14 +1,25 @@
-<head>
+<head>  
   <title>twitterClone</title>
 </head>
 
-<body>
-  <h1>Welcome to Meteor!</h1>
-
-  {{> hello}}
+<body>  
+  {{> tweetBox}}
 </body>
 
-<template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
-</template>
+<template name="tweetBox">  
+  <div class="tweetbox-container">
+    <div class="panel panel-default tweetbox col-md-6">
+      <div class="panel-body">
+        <!-- Text box for tweet content -->
+        <textarea class="form-control" id="tweetText" placeholder="What's happening?" rows="3"></textarea>
+
+        <!-- Character count & button -->
+        <div class="pull-right btnGroup">
+          <strong class="{{charClass}}">{{charCount}}</strong>
+          <button class="btn btn-info pull-right" type="button" {{disableButton}}>Tweet</button>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</template>  
